2001-10-01  Larry Ewing  <lewing@ximian.com>

	* htmlentity.c: add gtkhtml-compat.h include for alloca
	definition.  From David Kaelbling <drk@sgi.com>

	* htmlpainter.c: add gtkhtml-compat.h include for alloca
	definition.  From David Kaelbling <drk@sgi.com>

	* gtkhtml-stream.c (gtk_html_stream_vprintf): 
	(gtk_html_stream_printf): add helper functions
	for writing to streams to cut down the duplication of code that is
	floating around.

	* gtkhtml-stream.h: add prototypes for stream_printf and
	stream_vfprintf

	* htmlengine.c (parse_f): go ahead and pass the NULL on through.

	* htmltokenizer.c (add_byte): make the unknown character a ? so
	that we can distinguish it from a the underscore that camel will
	provide.

2001-09-26  Larry Ewing  <lewing@ximian.com>

	* htmlform.c (html_form_add_radio): handle a NULL name for the
	radio group without.  I'm not sure what the proper thing to do
	here is, but crashing is not a good thing.

	* htmlengine-edit-clueflowstyle.h: make the prototype match the
	function (spotted by Dan Nguyen <dnn@austin.ibm.com>).

2001-09-25  Lauris Kaplinski  <lauris@ximian.com>

	* htmlprinter.c (draw_panel): Close path before fill
	(draw_background): Ditto
	(begin): Close path before clip
	(prepare_rectangle): Close path

2001-09-21  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (is_convert_nbsp_needed): silence a warning.
	(is_convert_nbsp_needed): fix this properly.

	* htmlpainter.c: add #include <stdlib.h> to cover the alloca
	prototype.

	* htmlgdkpainter.c (gtkhtml_private_split_name): ifdef out since
	it is currently unused.

	* Makefile.am (testgtkhtml_LDADD): remove -static it was breaking
	the build under libtool-1.4 and FreeBSD.
	(gtest_LDADD): same.

2001-09-19    <NotZed@Ximian.com>

	* htmltokenizer.c (add_byte): Check that utf8_length doesn't
	outgrow our buffer.  The g_utf_get_char_extended function seems
	broken in a way i can't fathom right now.

2001-09-18  Larry Ewing  <lewing@ximian.com>
