@@ -1,5 +1,8 @@
 2001-10-01  Larry Ewing  <lewing@ximian.com>
 
+	* htmlsearch.c (html_search_new): handle the nongnu regex case
+	properly.  From David Kaelbling <drk@sgi.com>
+
 	* htmlentity.c: add gtkhtml-compat.h include for alloca
 	definition.  From David Kaelbling <drk@sgi.com>
 
